try adding background-color to class of digit buttons in order to fix digits being dark on Safari/iOS

--- a/style.css
+++ b/style.css
@@ -27,7 +27,6 @@ h1 {
     grid-template-rows: repeat(5, 1fr);
 }
 button {
-    background-color: #eeeeee;
     transition: all 0.5s;
     position: relative;
 }
@@ -42,7 +41,7 @@ button {
 .operation {
     background-color: #ddeeee;
 }
-.manipulation {
+.manipulation, .digit {
     background-color: #eeeeee;
 }
 .controls {
